使用 Colab 创建而成

--- a/assignments/assn1/assn1.ipynb
+++ b/assignments/assn1/assn1.ipynb
@@ -888,7 +888,18 @@
       },
       "outputs": [],
       "source": [
-        "## -- please write code for visualization here. -- ##"
+        "## -- please write code for visualization here. -- ##\n",
+        "smokers = insurance_table[insurance_table[\"smoker\"] == 1].copy()\n",
+        "nonsmokers = insurance_table[insurance_table[\"smoker\"] == 0].copy()\n",
+        "\n",
+        "# scatter plot: BMI (x) vs Charges (y) for smokers\n",
+        "plt.figure(figsize=(7,5))\n",
+        "plt.scatter(smokers[\"bmi\"], smokers[\"charges\"], alpha=0.6)\n",
+        "plt.xlabel(\"bmi\")\n",
+        "plt.ylabel(\"charges\")\n",
+        "plt.title(\"Charges vs BMI (Smokers)\")\n",
+        "plt.grid(True, alpha=0.3)\n",
+        "plt.show()"
       ]
     },
     {
