--- a/assignments/assn1/assn1.ipynb
+++ b/assignments/assn1/assn1.ipynb
@@ -1549,13 +1549,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
-        "id": "Tqh0WAr_lIzK"
+        "id": "Tqh0WAr_lIzK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "be3a12a1-0d85-43d3-9299-476bbc4a0ffb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MSE (smokers)     = 46,397,859.25\n",
+            "MSE (non-smokers) = 35,638,184.08\n",
+            "Difference (smokers - non-smokers) = 10,759,675.17\n",
+            "Since MSE_smokers > MSE_non-smokers, the linear model fits the NON-SMOKERS data better (smaller MSE).\n"
+          ]
+        }
+      ],
       "source": [
-        "## -- please write your answer here. -- ##"
+        "## -- please write your answer here. -- ##\n",
+        "def calcul_MSE(x,y,result):\n",
+        "  X = sm.add_constant(x)\n",
+        "  y_hat = result.predict(X)\n",
+        "  MSE = np.average((y-y_hat)**2)\n",
+        "  return MSE\n",
+        "\n",
+        "mse_smokers = calcul_MSE(x_smokers, Y_smokers, results_smokers)\n",
+        "mse_nonsmokers = calcul_MSE(x_nonsmokers, Y_nonsmokers, results_nonsmokers)\n",
+        "\n",
+        "diff = mse_smokers - mse_nonsmokers\n",
+        "\n",
+        "print(f\"MSE (smokers)     = {mse_smokers:,.2f}\")\n",
+        "print(f\"MSE (non-smokers) = {mse_nonsmokers:,.2f}\")\n",
+        "print(f\"Difference (smokers - non-smokers) = {diff:,.2f}\")\n",
+        "\n",
+        "if diff > 0:\n",
+        "    print(\"Since MSE_smokers > MSE_non-smokers, the linear model fits the NON-SMOKERS data better (smaller MSE).\")\n",
+        "else:\n",
+        "    print(\"Since MSE_smokers <= MSE_non-smokers, the linear model fits the SMOKERS data better (smaller MSE).\")"
       ]
     },
     {
