使用 Colab 创建而成

--- a/assignments/assn1/assn1.ipynb
+++ b/assignments/assn1/assn1.ipynb
@@ -1549,47 +1549,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 35,
       "metadata": {
         "id": "Tqh0WAr_lIzK",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "be3a12a1-0d85-43d3-9299-476bbc4a0ffb"
+        "outputId": "e66324e6-80b9-4345-87f3-cc62bcd9694c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "MSE (smokers)     = 46,397,859.25\n",
-            "MSE (non-smokers) = 35,638,184.08\n",
-            "Difference (smokers - non-smokers) = 10,759,675.17\n",
-            "Since MSE_smokers > MSE_non-smokers, the linear model fits the NON-SMOKERS data better (smaller MSE).\n"
+            "R^2 (smokers)     = 0.6504\n",
+            "R^2 (non-smokers) = 0.0071\n",
+            "The linear model fits the SMOKERS data better (higher R^2), meaning BMI explains more variability in charges among smokers using SLR.\n"
           ]
         }
       ],
       "source": [
-        "## -- please write your answer here. -- ##\n",
-        "def calcul_MSE(x,y,result):\n",
-        "  X = sm.add_constant(x)\n",
-        "  y_hat = result.predict(X)\n",
-        "  MSE = np.average((y-y_hat)**2)\n",
-        "  return MSE\n",
+        "# Compare model fit using R^2 only\n",
         "\n",
-        "mse_smokers = calcul_MSE(x_smokers, Y_smokers, results_smokers)\n",
-        "mse_nonsmokers = calcul_MSE(x_nonsmokers, Y_nonsmokers, results_nonsmokers)\n",
+        "r2_smokers = results_smokers.rsquared\n",
+        "r2_nonsmokers = results_nonsmokers.rsquared\n",
         "\n",
-        "diff = mse_smokers - mse_nonsmokers\n",
+        "print(f\"R^2 (smokers)     = {r2_smokers:.4f}\")\n",
+        "print(f\"R^2 (non-smokers) = {r2_nonsmokers:.4f}\")\n",
         "\n",
-        "print(f\"MSE (smokers)     = {mse_smokers:,.2f}\")\n",
-        "print(f\"MSE (non-smokers) = {mse_nonsmokers:,.2f}\")\n",
-        "print(f\"Difference (smokers - non-smokers) = {diff:,.2f}\")\n",
-        "\n",
-        "if diff > 0:\n",
-        "    print(\"Since MSE_smokers > MSE_non-smokers, the linear model fits the NON-SMOKERS data better (smaller MSE).\")\n",
+        "if r2_smokers > r2_nonsmokers:\n",
+        "    print(\"The linear model fits the SMOKERS data better (higher R^2), meaning BMI explains more variability in charges among smokers using SLR.\")\n",
+        "elif r2_smokers < r2_nonsmokers:\n",
+        "    print(\"The linear model fits the NON-SMOKERS data better (higher R^2),meaning BMI explains more variability in charges among non smokers using SLR.\")\n",
         "else:\n",
-        "    print(\"Since MSE_smokers <= MSE_non-smokers, the linear model fits the SMOKERS data better (smaller MSE).\")"
+        "    print(\"The two models fit equally well (same R^2).\")\n"
       ]
     },
     {
