使用 Colab 创建而成

--- a/assignments/assn1/assn1.ipynb
+++ b/assignments/assn1/assn1.ipynb
@@ -1569,8 +1569,7 @@
         }
       ],
       "source": [
-        "# Compare model fit using R^2 only\n",
-        "\n",
+        "## -- please write your answer here. -- ##\n",
         "r2_smokers = results_smokers.rsquared\n",
         "r2_nonsmokers = results_nonsmokers.rsquared\n",
         "\n",
@@ -1599,13 +1598,113 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
-        "id": "kbld-BMKlIzL"
+        "id": "kbld-BMKlIzL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c0018ca7-a15d-4342-b449-6d7ef33a536e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "First Model Summary\n",
+            "                            OLS Regression Results                            \n",
+            "==============================================================================\n",
+            "Dep. Variable:                charges   R-squared:                       0.117\n",
+            "Model:                            OLS   Adj. R-squared:                  0.116\n",
+            "Method:                 Least Squares   F-statistic:                     88.60\n",
+            "Date:                Sun, 25 Jan 2026   Prob (F-statistic):           7.39e-37\n",
+            "Time:                        20:07:18   Log-Likelihood:                -14394.\n",
+            "No. Observations:                1338   AIC:                         2.879e+04\n",
+            "Df Residuals:                    1335   BIC:                         2.881e+04\n",
+            "Df Model:                           2                                         \n",
+            "Covariance Type:            nonrobust                                         \n",
+            "==============================================================================\n",
+            "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+            "------------------------------------------------------------------------------\n",
+            "const      -6424.8046   1744.091     -3.684      0.000   -9846.262   -3003.347\n",
+            "bmi          332.9651     51.374      6.481      0.000     232.182     433.748\n",
+            "age          241.9308     22.298     10.850      0.000     198.187     285.674\n",
+            "==============================================================================\n",
+            "Omnibus:                      321.874   Durbin-Watson:                   2.010\n",
+            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              592.574\n",
+            "Skew:                           1.511   Prob(JB):                    2.11e-129\n",
+            "Kurtosis:                       4.223   Cond. No.                         287.\n",
+            "==============================================================================\n",
+            "\n",
+            "Notes:\n",
+            "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+            "\n",
+            "Second Model Summary\n",
+            "                            OLS Regression Results                            \n",
+            "==============================================================================\n",
+            "Dep. Variable:                charges   R-squared:                       0.747\n",
+            "Model:                            OLS   Adj. R-squared:                  0.747\n",
+            "Method:                 Least Squares   F-statistic:                     1316.\n",
+            "Date:                Sun, 25 Jan 2026   Prob (F-statistic):               0.00\n",
+            "Time:                        20:07:18   Log-Likelihood:                -13557.\n",
+            "No. Observations:                1338   AIC:                         2.712e+04\n",
+            "Df Residuals:                    1334   BIC:                         2.714e+04\n",
+            "Df Model:                           3                                         \n",
+            "Covariance Type:            nonrobust                                         \n",
+            "==============================================================================\n",
+            "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+            "------------------------------------------------------------------------------\n",
+            "const      -1.168e+04    937.569    -12.454      0.000   -1.35e+04   -9837.561\n",
+            "bmi          322.6151     27.487     11.737      0.000     268.692     376.538\n",
+            "age          259.5475     11.934     21.748      0.000     236.136     282.959\n",
+            "smoker      2.382e+04    412.867     57.703      0.000     2.3e+04    2.46e+04\n",
+            "==============================================================================\n",
+            "Omnibus:                      299.709   Durbin-Watson:                   2.077\n",
+            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              710.137\n",
+            "Skew:                           1.213   Prob(JB):                    6.25e-155\n",
+            "Kurtosis:                       5.618   Cond. No.                         289.\n",
+            "==============================================================================\n",
+            "\n",
+            "Notes:\n",
+            "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+            "\n",
+            "R^2 (smokers)     = 0.6504\n",
+            "R^2 (non-smokers) = 0.0071\n"
+          ]
+        }
+      ],
       "source": [
-        "## -- please write your answer here. -- ##"
+        "## -- please write your answer here. -- ##\n",
+        "\n",
+        "def build_MulRegression(covar,target,dataset):\n",
+        "  y = dataset[target]\n",
+        "  x = sm.add_constant(dataset[covar])\n",
+        "\n",
+        "  result = sm.OLS(y,x).fit()\n",
+        "  return result\n",
+        "\n",
+        "target = 'charges'\n",
+        "covar1 = ['bmi','age']\n",
+        "covar2 = ['bmi','age','smoker']\n",
+        "dataset = insurance_table\n",
+        "\n",
+        "result1 = build_MulRegression(covar1,target,dataset)\n",
+        "result2 = build_MulRegression(covar2,target,dataset)\n",
+        "\n",
+        "print('First Model Summary')\n",
+        "print(result1.summary())\n",
+        "print('\\nSecond Model Summary')\n",
+        "print(result2.summary())\n",
+        "\n",
+        "r2_1 = result1.rsquared\n",
+        "r2_2 = result2.rsquared\n",
+        "\n",
+        "print('')\n",
+        "print(f\"R^2 (smokers)     = {r2_smokers:.4f}\")\n",
+        "print(f\"R^2 (non-smokers) = {r2_nonsmokers:.4f}\")\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
