使用 Colab 创建而成

--- a/assignments/assn1/assn1.ipynb
+++ b/assignments/assn1/assn1.ipynb
@@ -1598,13 +1598,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 46,
       "metadata": {
         "id": "kbld-BMKlIzL",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c0018ca7-a15d-4342-b449-6d7ef33a536e"
+        "outputId": "dbf51223-34cf-4009-93d5-95f5b946b9be"
       },
       "outputs": [
         {
@@ -1618,7 +1618,7 @@
             "Model:                            OLS   Adj. R-squared:                  0.116\n",
             "Method:                 Least Squares   F-statistic:                     88.60\n",
             "Date:                Sun, 25 Jan 2026   Prob (F-statistic):           7.39e-37\n",
-            "Time:                        20:07:18   Log-Likelihood:                -14394.\n",
+            "Time:                        20:17:56   Log-Likelihood:                -14394.\n",
             "No. Observations:                1338   AIC:                         2.879e+04\n",
             "Df Residuals:                    1335   BIC:                         2.881e+04\n",
             "Df Model:                           2                                         \n",
@@ -1646,7 +1646,7 @@
             "Model:                            OLS   Adj. R-squared:                  0.747\n",
             "Method:                 Least Squares   F-statistic:                     1316.\n",
             "Date:                Sun, 25 Jan 2026   Prob (F-statistic):               0.00\n",
-            "Time:                        20:07:18   Log-Likelihood:                -13557.\n",
+            "Time:                        20:17:56   Log-Likelihood:                -13557.\n",
             "No. Observations:                1338   AIC:                         2.712e+04\n",
             "Df Residuals:                    1334   BIC:                         2.714e+04\n",
             "Df Model:                           3                                         \n",
@@ -1668,8 +1668,15 @@
             "Notes:\n",
             "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
             "\n",
-            "R^2 (smokers)     = 0.6504\n",
-            "R^2 (non-smokers) = 0.0071\n"
+            "Model 1  R^2 = 0.117,  Adj R^2 = 0.116\n",
+            "Model 2 R^2 = 0.747,  Adj R^2 = 0.747\n",
+            "Adding smoker increases R^2 by 0.630,\n",
+            "so the model now explains about 74.7% of the variability in charges (much better fit).\n",
+            "Coefficients: bmi ≈ 323, age ≈ 260, smoker ≈ 23824.\n",
+            "smoker is extremely significant (p < 0.001) and is a dominant driver of charges.\n",
+            "\n",
+            "Overall observation:\n",
+            "Adding the smoker indicator transforms the model from weak (Model 1) to strong (Model 2).\n"
           ]
         }
       ],
@@ -1698,10 +1705,18 @@
         "\n",
         "r2_1 = result1.rsquared\n",
         "r2_2 = result2.rsquared\n",
+        "diff = r2_2-r2_1\n",
         "\n",
         "print('')\n",
-        "print(f\"R^2 (smokers)     = {r2_smokers:.4f}\")\n",
-        "print(f\"R^2 (non-smokers) = {r2_nonsmokers:.4f}\")\n",
+        "print(f\"Model 1  R^2 = {result1.rsquared:.3f},  Adj R^2 = {result1.rsquared_adj:.3f}\")\n",
+        "print(f\"Model 2 R^2 = {result2.rsquared:.3f},  Adj R^2 = {result2.rsquared_adj:.3f}\")\n",
+        "print(f\"Adding smoker increases R^2 by {diff:.3f},\")\n",
+        "print(f\"so the model now explains about {result2.rsquared*100:.1f}% of the variability in charges (much better fit).\")\n",
+        "print(f\"Coefficients: bmi ≈ {result2.params['bmi']:.0f}, age ≈ {result2.params['age']:.0f}, smoker ≈ {result2.params['smoker']:.0f}.\")\n",
+        "print(\"smoker is extremely significant (p < 0.001) and is a dominant driver of charges.\\n\")\n",
+        "\n",
+        "print(\"Overall observation:\")\n",
+        "print(\"Adding the smoker indicator transforms the model from weak (Model 1) to strong (Model 2).\")\n",
         "\n",
         "\n",
         "\n"
