使用 Colab 创建而成

--- a/assignments/assn1/assn1.ipynb
+++ b/assignments/assn1/assn1.ipynb
@@ -1598,13 +1598,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": 186,
       "metadata": {
         "id": "kbld-BMKlIzL",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "be7568c9-7516-43bc-8131-41c24eabb6a7"
+        "outputId": "d2c54447-2d05-4b32-eccd-6269971be094"
       },
       "outputs": [
         {
@@ -1618,7 +1618,7 @@
             "Model:                            OLS   Adj. R-squared:                  0.116\n",
             "Method:                 Least Squares   F-statistic:                     88.60\n",
             "Date:                Sun, 25 Jan 2026   Prob (F-statistic):           7.39e-37\n",
-            "Time:                        22:45:22   Log-Likelihood:                -14394.\n",
+            "Time:                        23:31:23   Log-Likelihood:                -14394.\n",
             "No. Observations:                1338   AIC:                         2.879e+04\n",
             "Df Residuals:                    1335   BIC:                         2.881e+04\n",
             "Df Model:                           2                                         \n",
@@ -1646,7 +1646,7 @@
             "Model:                            OLS   Adj. R-squared:                  0.747\n",
             "Method:                 Least Squares   F-statistic:                     1316.\n",
             "Date:                Sun, 25 Jan 2026   Prob (F-statistic):               0.00\n",
-            "Time:                        22:45:22   Log-Likelihood:                -13557.\n",
+            "Time:                        23:31:23   Log-Likelihood:                -13557.\n",
             "No. Observations:                1338   AIC:                         2.712e+04\n",
             "Df Residuals:                    1334   BIC:                         2.714e+04\n",
             "Df Model:                           3                                         \n",
@@ -1667,16 +1667,7 @@
             "\n",
             "Notes:\n",
             "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-            "\n",
-            "Model 1  R^2 = 0.117,  Adj R^2 = 0.116\n",
-            "Model 2 R^2 = 0.747,  Adj R^2 = 0.747\n",
-            "Adding smoker increases R^2 by 0.630,\n",
-            "so the model now explains about 74.7% of the variability in charges (much better fit).\n",
-            "Coefficients: bmi ≈ 323, age ≈ 260, smoker ≈ 23824.\n",
-            "smoker is extremely significant (p < 0.001) and is a dominant driver of charges.\n",
-            "\n",
-            "Overall observation:\n",
-            "Adding the smoker indicator transforms the model from weak (Model 1) to strong (Model 2).\n"
+            "0.6302937727425523\n"
           ]
         }
       ],
@@ -1707,20 +1698,31 @@
         "r2_2 = result2.rsquared\n",
         "diff = r2_2-r2_1\n",
         "\n",
-        "print('')\n",
-        "print(f\"Model 1  R^2 = {result1.rsquared:.3f},  Adj R^2 = {result1.rsquared_adj:.3f}\")\n",
-        "print(f\"Model 2 R^2 = {result2.rsquared:.3f},  Adj R^2 = {result2.rsquared_adj:.3f}\")\n",
-        "print(f\"Adding smoker increases R^2 by {diff:.3f},\")\n",
-        "print(f\"so the model now explains about {result2.rsquared*100:.1f}% of the variability in charges (much better fit).\")\n",
-        "print(f\"Coefficients: bmi ≈ {result2.params['bmi']:.0f}, age ≈ {result2.params['age']:.0f}, smoker ≈ {result2.params['smoker']:.0f}.\")\n",
-        "print(\"smoker is extremely significant (p < 0.001) and is a dominant driver of charges.\\n\")\n",
-        "\n",
-        "print(\"Overall observation:\")\n",
-        "print(\"Adding the smoker indicator transforms the model from weak (Model 1) to strong (Model 2).\")\n",
-        "\n",
+        "print(diff)\n",
         "\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Model 1 $R^2$ = 0.117,  Adj $R^2$ = 0.116  \n",
+        "\n",
+        "Model 2 $R^2$ = 0.747,  Adj $R^2$ = 0.747  \n",
+        "\n",
+        "Adding smoker increases $R^2$ by 0.630,  \n",
+        "so the model now explains about 74.7% of the variability in charges (much better fit).  \n",
+        "\n",
+        "Coefficients: bmi $\\approx$ 323, age $\\approx$ 260, smoker $\\approx$ 23824.  \n",
+        "\n",
+        "smoker is extremely significant ($p < 0.001$) and is a dominant driver of charges.\n",
+        "\n",
+        "**Overall observation:**  \n",
+        "Adding the smoker indicator transforms the model from weak (Model 1) to strong (Model 2).\n"
+      ],
+      "metadata": {
+        "id": "5yP6lq4pfS6j"
+      }
     },
     {
       "cell_type": "markdown",
@@ -3042,10 +3044,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 138,
+      "execution_count": 194,
       "metadata": {
         "id": "C3Y7oSvblIzN",
-        "outputId": "034df927-a43c-4620-fb2b-bd43d18a080d",
+        "outputId": "f9d3193f-c8e1-444c-9932-ca0dc69cef54",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3055,17 +3057,17 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Ellipsis"
+              "np.float64(0.0029437356216700235)"
             ]
           },
           "metadata": {},
-          "execution_count": 138
+          "execution_count": 194
         }
       ],
       "source": [
         "batman = row_for_title(\"batman returns\")\n",
         "avengers = row_for_title(\"the avengers\")\n",
-        "action_distance = ...\n",
+        "action_distance = np.sqrt((batman['money'].item()-avengers['money'].item())**2+(batman['feel'].item()-avengers['feel'].item())**2)\n",
         "action_distance"
       ]
     },
@@ -3080,10 +3082,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": 192,
       "metadata": {
         "id": "0wPCWPEMlIzN",
-        "outputId": "6ed8fbc0-343b-455d-86cf-f53885919dfc",
+        "outputId": "9b2c8615-b41f-4492-8f5c-6421e2a47008",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 721
@@ -3125,10 +3127,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 140,
+      "execution_count": 197,
       "metadata": {
         "id": "_0omuArZlIzN",
-        "outputId": "6beeb99c-a4fb-43d1-bf15-ad89a79df591",
+        "outputId": "c5260cb5-7058-4586-bac4-d70cddb7988e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3138,8 +3140,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "the terminator distance:\t None\n",
-            "the avengers distance:\t None\n"
+            "the terminator distance:\t 0.0018531387547749897\n",
+            "the avengers distance:\t 0.0029437356216700235\n"
           ]
         }
       ],
@@ -3149,9 +3151,12 @@
         "\n",
         "    Only the features named x_feature and y_feature are used when computing the distance.\n",
         "    \"\"\"\n",
-        "    row0 = ...\n",
-        "    row1 = ...\n",
-        "    ...\n",
+        "    row0 = row_for_title(title0)\n",
+        "    row1 = row_for_title(title1)\n",
+        "\n",
+        "    distance = np.sqrt((row0[x_feature].item()-row1[x_feature].item())**2+(row0[y_feature].item()-row1[y_feature].item())**2)\n",
+        "\n",
+        "    return distance\n",
         "\n",
         "for movie in [\"the terminator\", \"the avengers\"]:\n",
         "    movie_distance = distance_two_features(movie, \"batman returns\", \"money\", \"feel\")\n",
