--- a/assignments/assn1/assn1.ipynb
+++ b/assignments/assn1/assn1.ipynb
@@ -3178,7 +3178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 141,
+      "execution_count": 198,
       "metadata": {
         "id": "VKDq1AhKlIzN"
       },
@@ -3191,7 +3191,7 @@
         "      title: A string, the name of a movie.\n",
         "    \"\"\"\n",
         "\n",
-        "    ..."
+        "    return distance_two_features(title,'batman returns','money','feel')"
       ]
     },
     {
@@ -3209,12 +3209,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 142,
+      "execution_count": 216,
       "metadata": {
         "id": "Pk-oK70VlIzO",
-        "outputId": "3304cc10-1a11-4c3e-97e6-6b5e414c18b1",
+        "outputId": "ceab1795-11c0-4149-cafc-76633fbe8444",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 269
         }
       },
       "outputs": [
@@ -3222,17 +3223,275 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Ellipsis"
-            ]
+              "                           Title    Genre     money      feel  \\\n",
+              "0  the bridges of madison county  romance  0.000565  0.004333   \n",
+              "1                the fisher king  romance  0.000618  0.003504   \n",
+              "2                 broadcast news  romance  0.000137  0.003553   \n",
+              "3                        hellboy   action  0.000000  0.003350   \n",
+              "4             as good as it gets  romance  0.000523  0.003139   \n",
+              "5                     spider-man   action  0.000347  0.003126   \n",
+              "6               harold and maude  romance  0.000000  0.003023   \n",
+              "\n",
+              "   distance from batman  \n",
+              "0              0.000323  \n",
+              "1              0.000525  \n",
+              "2              0.000590  \n",
+              "3              0.000834  \n",
+              "4              0.000878  \n",
+              "5              0.000903  \n",
+              "6              0.001112  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-3a1d7b68-500c-4e36-b402-8fffc12dbf85\" class=\"colab-df-container\">\n",
+              "    <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Title</th>\n",
+              "      <th>Genre</th>\n",
+              "      <th>money</th>\n",
+              "      <th>feel</th>\n",
+              "      <th>distance from batman</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>the bridges of madison county</td>\n",
+              "      <td>romance</td>\n",
+              "      <td>0.000565</td>\n",
+              "      <td>0.004333</td>\n",
+              "      <td>0.000323</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>the fisher king</td>\n",
+              "      <td>romance</td>\n",
+              "      <td>0.000618</td>\n",
+              "      <td>0.003504</td>\n",
+              "      <td>0.000525</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>broadcast news</td>\n",
+              "      <td>romance</td>\n",
+              "      <td>0.000137</td>\n",
+              "      <td>0.003553</td>\n",
+              "      <td>0.000590</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>hellboy</td>\n",
+              "      <td>action</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.003350</td>\n",
+              "      <td>0.000834</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>as good as it gets</td>\n",
+              "      <td>romance</td>\n",
+              "      <td>0.000523</td>\n",
+              "      <td>0.003139</td>\n",
+              "      <td>0.000878</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>spider-man</td>\n",
+              "      <td>action</td>\n",
+              "      <td>0.000347</td>\n",
+              "      <td>0.003126</td>\n",
+              "      <td>0.000903</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>harold and maude</td>\n",
+              "      <td>romance</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.003023</td>\n",
+              "      <td>0.001112</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "    <div class=\"colab-df-buttons\">\n",
+              "\n",
+              "  <div class=\"colab-df-container\">\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3a1d7b68-500c-4e36-b402-8fffc12dbf85')\"\n",
+              "            title=\"Convert this dataframe to an interactive table.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
+              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "\n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-buttons div {\n",
+              "      margin-bottom: 4px;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "    <script>\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#df-3a1d7b68-500c-4e36-b402-8fffc12dbf85 button.colab-df-convert');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      async function convertToInteractive(key) {\n",
+              "        const element = document.querySelector('#df-3a1d7b68-500c-4e36-b402-8fffc12dbf85');\n",
+              "        const dataTable =\n",
+              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                    [key], {});\n",
+              "        if (!dataTable) return;\n",
+              "\n",
+              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "          + ' to learn more about interactive tables.';\n",
+              "        element.innerHTML = '';\n",
+              "        dataTable['output_type'] = 'display_data';\n",
+              "        await google.colab.output.renderOutput(dataTable, element);\n",
+              "        const docLink = document.createElement('div');\n",
+              "        docLink.innerHTML = docLinkHtml;\n",
+              "        element.appendChild(docLink);\n",
+              "      }\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
+              "\n",
+              "  <div id=\"id_062f861d-9b7f-43fa-8615-3c8e749182a0\">\n",
+              "    <style>\n",
+              "      .colab-df-generate {\n",
+              "        background-color: #E8F0FE;\n",
+              "        border: none;\n",
+              "        border-radius: 50%;\n",
+              "        cursor: pointer;\n",
+              "        display: none;\n",
+              "        fill: #1967D2;\n",
+              "        height: 32px;\n",
+              "        padding: 0 0 0 0;\n",
+              "        width: 32px;\n",
+              "      }\n",
+              "\n",
+              "      .colab-df-generate:hover {\n",
+              "        background-color: #E2EBFA;\n",
+              "        box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "        fill: #174EA6;\n",
+              "      }\n",
+              "\n",
+              "      [theme=dark] .colab-df-generate {\n",
+              "        background-color: #3B4455;\n",
+              "        fill: #D2E3FC;\n",
+              "      }\n",
+              "\n",
+              "      [theme=dark] .colab-df-generate:hover {\n",
+              "        background-color: #434B5C;\n",
+              "        box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "        filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "        fill: #FFFFFF;\n",
+              "      }\n",
+              "    </style>\n",
+              "    <button class=\"colab-df-generate\" onclick=\"generateWithVariable('close_movies')\"\n",
+              "            title=\"Generate code using this dataframe.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M7,19H8.4L18.45,9,17,7.55,7,17.6ZM5,21V16.75L18.45,3.32a2,2,0,0,1,2.83,0l1.4,1.43a1.91,1.91,0,0,1,.58,1.4,1.91,1.91,0,0,1-.58,1.4L9.25,21ZM18.45,9,17,7.55Zm-12,3A5.31,5.31,0,0,0,4.9,8.1,5.31,5.31,0,0,0,1,6.5,5.31,5.31,0,0,0,4.9,4.9,5.31,5.31,0,0,0,6.5,1,5.31,5.31,0,0,0,8.1,4.9,5.31,5.31,0,0,0,12,6.5,5.46,5.46,0,0,0,6.5,12Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "    <script>\n",
+              "      (() => {\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#id_062f861d-9b7f-43fa-8615-3c8e749182a0 button.colab-df-generate');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      buttonEl.onclick = () => {\n",
+              "        google.colab.notebook.generateWithVariable('close_movies');\n",
+              "      }\n",
+              "      })();\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
+              "    </div>\n",
+              "  </div>\n"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "variable_name": "close_movies",
+              "summary": "{\n  \"name\": \"close_movies\",\n  \"rows\": 7,\n  \"fields\": [\n    {\n      \"column\": \"Title\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 7,\n        \"samples\": [\n          \"the bridges of madison county\",\n          \"the fisher king\",\n          \"spider-man\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Genre\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"action\",\n          \"romance\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"money\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.0002674449069399955,\n        \"min\": 0.0,\n        \"max\": 0.000618302,\n        \"num_unique_values\": 6,\n        \"samples\": [\n          0.000565185,\n          0.000618302\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"feel\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.0004444306213455273,\n        \"min\": 0.003023432,\n        \"max\": 0.004333082,\n        \"num_unique_values\": 7,\n        \"samples\": [\n          0.004333082,\n          0.00350371\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"distance from batman\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.0002694006023034547,\n        \"min\": 0.0003232518300845338,\n        \"max\": 0.001112353504731297,\n        \"num_unique_values\": 7,\n        \"samples\": [\n          0.0003232518300845338,\n          0.0005253864442027408\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+            }
           },
           "metadata": {},
-          "execution_count": 142
+          "execution_count": 216
         }
       ],
       "source": [
         "# The sample solution took multiple lines.\n",
-        "...\n",
-        "close_movies = ...\n",
+        "n_train = train_movies.shape[0]\n",
+        "train_movies_close = train_movies[[\"Title\", \"Genre\", \"money\", \"feel\"]].copy()\n",
+        "dist = []\n",
+        "for i in range(n_train):\n",
+        "  title = train_movies['Title'].loc[i]\n",
+        "  distance = distance_from_batman_returns(title)\n",
+        "  dist.append(distance)\n",
+        "\n",
+        "train_movies_close.insert(4, 'distance from batman', dist)\n",
+        "\n",
+        "\n",
+        "close_movies= train_movies_close.sort_values(\"distance from batman\", ascending=True).reset_index(drop=True)\n",
+        "close_movies = close_movies.iloc[:7,:]\n",
         "close_movies"
       ]
     },
@@ -3251,11 +3510,58 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 143,
+      "source": [
+        "vals = movies[\"Genre\"].unique()\n",
+        "vals\n",
+        "len(movies['Genre'])\n"
+      ],
       "metadata": {
-        "id": "v7dM1ZlHlIzO"
+        "id": "qOGL_4ki3JdU",
+        "outputId": "d840249c-dd80-4825-db55-8f22d881abf0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "execution_count": 220,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "236"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 220
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 224,
+      "metadata": {
+        "id": "v7dM1ZlHlIzO",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "2f601c49-cf78-4861-d1ee-56da0903c162"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'romance'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 224
+        }
+      ],
       "source": [
         "def most_common(label, dataframe):\n",
         "    \"\"\"The most common element in a column of a table.\n",
@@ -3267,7 +3573,16 @@
         "    It returns the most common value in that column of that table.\n",
         "    In case of a tie, it returns any one of the most common values\n",
         "    \"\"\"\n",
-        "    ...\n",
+        "    records = {}\n",
+        "    for val in dataframe[label]:\n",
+        "      records[val] = records.get(val, 0) + 1\n",
+        "\n",
+        "\n",
+        "    most_common = max(records, key=records.get)\n",
+        "    return most_common\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "# Calling most_common on your table of 7 nearest neighbors classifies\n",
         "# \"batman returns\" as a romance movie, 5 votes to 2.\n",
@@ -3311,10 +3626,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 144,
+      "execution_count": 228,
       "metadata": {
         "id": "5VPEPPL_lIzO",
-        "outputId": "c9c71365-a9c2-4ba5-ee10-cfda7be1aff4",
+        "outputId": "df6b9233-b978-4b1a-cb0c-c8efdfeafcb2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3324,19 +3639,22 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Ellipsis"
+              "np.float64(0.042203549225386355)"
             ]
           },
           "metadata": {},
-          "execution_count": 144
+          "execution_count": 228
         }
       ],
       "source": [
         "def distance(features1, features2):\n",
         "    \"\"\"The Euclidean distance between two arrays of feature values.\"\"\"\n",
-        "    ...\n",
+        "    distance = np.sqrt(sum((features1-features2)**2))\n",
+        "    return distance\n",
         "\n",
-        "distance_first_to_first = ...\n",
+        "feature1 = np.array(train_movies.drop(train_movies.columns[np.arange(6)], axis=1).iloc[0])\n",
+        "feature2 = np.array(test_movies.drop(test_movies.columns[np.arange(6)], axis=1).iloc[0])\n",
+        "distance_first_to_first = distance(feature1,feature2)\n",
         "distance_first_to_first"
       ]
     },
