使用 Colab 创建而成

--- a/assignments/assn1/assn1.ipynb
+++ b/assignments/assn1/assn1.ipynb
@@ -3516,11 +3516,11 @@
         "len(movies['Genre'])\n"
       ],
       "metadata": {
-        "id": "qOGL_4ki3JdU",
-        "outputId": "d840249c-dd80-4825-db55-8f22d881abf0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qOGL_4ki3JdU",
+        "outputId": "d840249c-dd80-4825-db55-8f22d881abf0"
       },
       "execution_count": 220,
       "outputs": [
@@ -3706,7 +3706,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 233,
       "metadata": {
         "id": "ZFzDwRkMlIzO"
       },
@@ -3714,7 +3714,7 @@
       "source": [
         "# Set my_20_features to a list of 20 features (strings that are column labels)\n",
         "\n",
-        "my_20_features = []\n",
+        "my_20_features = ['marri','home','nice','huh','hous','hello','miss','wife','mother','happi','boy','power','captain','ship','system','weve','move','three','world','run']\n",
         "\n",
         "train_20 = train_movies[my_20_features]\n",
         "test_20 = test_movies[my_20_features]"
@@ -3735,7 +3735,7 @@
         "id": "JaONyX6GlIzO"
       },
       "source": [
-        "*Write your answer here, replacing this text.*"
+        "I selected words that are far from the dashed $y=x$ line in the romance-vs-action average-occurrence plot, because greater distance from this line indicates a larger difference in usage between the two genres. These words should therefore have stronger discriminative power for distinguishing romance from action movies."
       ]
     },
     {
@@ -3749,10 +3749,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 146,
+      "execution_count": 234,
       "metadata": {
         "id": "Txy4WZRKlIzO",
-        "outputId": "5bb3dbc0-3306-4bfb-d906-09cff3596211",
+        "outputId": "7e3e02cc-9125-4aad-84e3-f10aa5b8fc3c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3767,7 +3767,27 @@
             "Genre       action\n",
             "Name: 200, dtype: object\n",
             "Features:\n",
-            "Series([], Name: 200, dtype: float64)\n"
+            "marri      0.000321\n",
+            "home       0.000000\n",
+            "nice       0.000321\n",
+            "huh        0.000963\n",
+            "hous       0.000000\n",
+            "hello      0.000000\n",
+            "miss       0.000963\n",
+            "wife       0.000000\n",
+            "mother     0.000963\n",
+            "happi      0.000000\n",
+            "boy        0.000321\n",
+            "power      0.000000\n",
+            "captain    0.000000\n",
+            "ship       0.000000\n",
+            "system     0.000000\n",
+            "weve       0.000321\n",
+            "move       0.000000\n",
+            "three      0.000642\n",
+            "world      0.000321\n",
+            "run        0.000000\n",
+            "Name: 200, dtype: float64\n"
           ]
         }
       ],
