使用 Colab 创建而成

--- a/assignments/assn1/assn1.ipynb
+++ b/assignments/assn1/assn1.ipynb
@@ -1291,23 +1291,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 358,
       "metadata": {
         "id": "bRkG4Bo4lIzK",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f98309a5-a2b0-41db-9f97-86322f96f1fa"
+        "outputId": "80bd2eab-bbac-4c27-f509-3a7a9275c69c"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-2169944150.py:11: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-            "  Beta_smokers = [results_smokers.params[0], results_smokers.params[1]]\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -1316,7 +1308,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 115
+          "execution_count": 358
         }
       ],
       "source": [
@@ -1330,7 +1322,7 @@
         "model_smokers = sm.OLS(Y_smokers, X_smokers)\n",
         "results_smokers = model_smokers.fit()\n",
         "\n",
-        "Beta_smokers = [results_smokers.params[0], results_smokers.params[1]]\n",
+        "Beta_smokers = [results_smokers.params['const'], results_smokers.params['bmi']]\n",
         "Beta_smokers"
       ]
     },
@@ -1455,23 +1447,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": 359,
       "metadata": {
         "id": "XrJEjUuflIzK",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "db934a3d-a3ef-4b0f-e348-6fe09a4be859"
+        "outputId": "b13520e1-64e8-400c-9cd1-c75191419d5a"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-831861732.py:9: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-            "  Beta_nonsmokers = [results_nonsmokers.params[0], results_nonsmokers.params[1]]\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -1480,7 +1464,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 119
+          "execution_count": 359
         }
       ],
       "source": [
@@ -1492,7 +1476,8 @@
         "model_nonsmokers = sm.OLS(Y_nonsmokers, X_nonsmokers)\n",
         "results_nonsmokers = model_nonsmokers.fit()\n",
         "\n",
-        "Beta_nonsmokers = [results_nonsmokers.params[0], results_nonsmokers.params[1]]\n",
+        "\n",
+        "Beta_nonsmokers = [results_nonsmokers.params['const'], results_nonsmokers.params['bmi']]\n",
         "Beta_nonsmokers"
       ]
     },
@@ -2822,34 +2807,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 166,
+      "execution_count": 361,
       "metadata": {
         "id": "wEM4NxdRlIzM",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 547
+          "height": 333
         },
-        "outputId": "7f687653-b476-453a-9ab4-f1a8aa79b3d3"
+        "outputId": "39bfc2ba-2e87-492e-a204-a9711e92b288"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-8219326.py:3: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  dataframe[\"is_action\"] = (dataframe[\"Genre\"] == \"action\").astype(int)\n",
-            "/tmp/ipython-input-8219326.py:3: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  dataframe[\"is_action\"] = (dataframe[\"Genre\"] == \"action\").astype(int)\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -2863,10 +2830,9 @@
       ],
       "source": [
         "def action_proportion(dataframe):\n",
-        "    \"\"\"Return the proportion of movies in a table that have the Action genre.\"\"\"\n",
-        "    dataframe[\"is_action\"] = (dataframe[\"Genre\"] == \"action\").astype(int)\n",
-        "    proportion = sum(dataframe['is_action'])/len(dataframe)\n",
-        "    return proportion\n",
+        "\n",
+        "    return (dataframe[\"Genre\"] == \"action\").mean()\n",
+        "\n",
         "\n",
         "proportion_train = action_proportion(train_movies)\n",
         "proportion_test = action_proportion(test_movies)\n",
@@ -3785,11 +3751,11 @@
         "np.asmatrix(train_20.values)"
       ],
       "metadata": {
-        "id": "P4nVSqGeF8FY",
-        "outputId": "c6ab5980-dd19-40b7-9e86-c680e69f75da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "P4nVSqGeF8FY",
+        "outputId": "c6ab5980-dd19-40b7-9e86-c680e69f75da"
       },
       "execution_count": 237,
       "outputs": [
@@ -4141,8 +4107,8 @@
       ],
       "source": [
         "genre_and_distances = train_movies[['Title','Genre']].copy()\n",
-        "distance = fast_distances(test_20.iloc[0,:],train_20)\n",
-        "genre_and_distances.insert(2,'Distance',distance)\n",
+        "distances = fast_distances(test_20.iloc[0,:],train_20)\n",
+        "genre_and_distances.insert(2,'Distance',distances)\n",
         "genre_and_distances = genre_and_distances.sort_values('Distance',ascending = True).reset_index(drop=True)\n",
         "genre_and_distances"
       ]
@@ -4160,10 +4126,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 260,
+      "execution_count": 370,
       "metadata": {
         "id": "UG7KTjr0lIzP",
-        "outputId": "d68f2d5f-13ec-413f-d25d-b5b3fdebde4e",
+        "outputId": "6ab94c2c-6ac4-42e5-c2fe-51e58b6b5764",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4173,17 +4139,19 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The assigned genre, romance, was not correct.\n"
+            "The assigned genre, action, was correct.\n"
           ]
         }
       ],
       "source": [
         "# Set my_assigned_genre to the most common genre among these.\n",
-        "my_assigned_genre = most_common('Genre', genre_and_distances.iloc[0:7,:])\n",
+        "my_assigned_genre = most_common('Genre', genre_and_distances.iloc[0:5,:])\n",
         "\n",
         "# Set my_assigned_genre_was_correct to True if my_assigned_genre\n",
         "# matches the actual genre of the first movie in the test set.\n",
-        "my_assigned_genre_was_correct = True if my_assigned_genre == str(test_movies[['Genre']].iloc[0]) else False\n",
+        "actual_genre = test_movies['Genre'].iloc[0]\n",
+        "my_assigned_genre_was_correct = (my_assigned_genre == actual_genre)\n",
+        "\n",
         "\n",
         "print(\"The assigned genre, {}, was{}correct.\".format(my_assigned_genre, \" \" if my_assigned_genre_was_correct else \" not \"))"
       ]
@@ -4252,10 +4220,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 347,
+      "execution_count": 372,
       "metadata": {
         "id": "fXIvk-1QlIzP",
-        "outputId": "f143a63a-ab08-40d1-cd8b-797dd52c0728",
+        "outputId": "52ad5f95-8894-4acd-8630-0d457a300321",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -4273,12 +4241,12 @@
             }
           },
           "metadata": {},
-          "execution_count": 347
+          "execution_count": 372
         }
       ],
       "source": [
         "# The sample solution first defined a row called king_kong_features.\n",
-        "king_kong_features = test_20.loc[test_movies[test_movies[\"Title\"]=='king kong'].index,:]\n",
+        "king_kong_features = test_20.loc[test_movies[\"Title\"].eq(\"king kong\")].iloc[0]\n",
         "king_kong_genre = classify(king_kong_features,train_20,train_movies[['Genre']],11)\n",
         "king_kong_genre"
       ]
@@ -4865,7 +4833,7 @@
         "id": "uATi9fW5lIzQ"
       },
       "source": [
-        "*Write your answer here, replacing this text.*"
+        "Most of the misclassified movies are actually romance (10 vs. 4), which suggests the classifier is stronger at identifying action than romance in this test set. Many of the mistakes also come from genre-boundary movies that mix action with romance/drama (e.g., witness, top gun, dune, legend, the mummy), making their word-use patterns overlap and harder for k-NN to separate."
       ]
     },
     {
