使用 Colab 创建而成

--- a/assignments/assn2/assn2.ipynb
+++ b/assignments/assn2/assn2.ipynb
@@ -1810,7 +1810,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 99,
       "id": "c0c115fe",
       "metadata": {
         "id": "c0c115fe"
@@ -1838,7 +1838,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 100,
       "id": "206915f7",
       "metadata": {
         "id": "206915f7"
@@ -1893,7 +1893,45 @@
         "\n",
         "Be sure to show your work by either typing it in here using LaTeX, or by taking a picture of your handwritten solutions and displaying them here in the notebook. (If you choose the latter of these two options, be sure that the display is large enough and legible. Please also upload a photo seperately to Gradescope in case the embedded image failed.)\n",
         "\n",
-        "**[put your solution here]**"
+        "**[put your solution here]**\n",
+        "$$\n",
+        "L(\\beta_0,\\beta_1)=\\frac{1}{n}\\sum_{i=1}^n\\left[\\log\\left(1+e^{\\beta_0+X_i\\beta_1}\\right)-Y_i(\\beta_0+X_i\\beta_1)\\right]+\\lambda \\beta_1^2\n",
+        "$$\n",
+        "\n",
+        "Let\n",
+        "$$\n",
+        "\\qquad Z_i=\\beta_0+X_i\\beta_1,\\qquad \\sigma(Z)=\\frac{1}{1+e^{-Z}}.\n",
+        "$$\n",
+        "\n",
+        "We have\n",
+        "$$\n",
+        "\\frac{\\partial}{\\partial Z_i}\\log\\left(1+e^{Z_i}\\right)=\\frac{e^{Z_i}}{1+e^{Z_i}}=\\sigma(Z_i),\n",
+        "\\qquad \\frac{\\partial Z_i}{\\partial \\beta_1}=X_i.\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\partial}{\\partial \\beta_1}\\left[\\log\\left(1+e^{Z_i}\\right)-Y_i Z_i\\right]\n",
+        "=\\sigma(Z_i)\\,X_i-Y_i X_i\n",
+        "=X_i\\left(\\sigma(Z_i)-Y_i\\right).\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\partial}{\\partial \\beta_1}\\left(\\lambda \\beta_1^2\\right)=2\\lambda\\beta_1.\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\partial L}{\\partial \\beta_1}\n",
+        "=\\frac{1}{n}\\sum_{i=1}^n X_i\\left(\\sigma(\\beta_0+X_i\\beta_1)-Y_i\\right)+2\\lambda\\beta_1\n",
+        "$$\n",
+        "\n",
+        "Finally we get:\n",
+        "$$\n",
+        "\\boxed{\n",
+        "\\frac{\\partial L}{\\partial \\beta_1}\n",
+        "=\\frac{1}{n}\\sum_{i=1}^n X_i\\left(\\frac{e^{\\beta_0+X_i\\beta_1}}{1+e^{\\beta_0+X_i\\beta_1}}-Y_i\\right)+2\\lambda\\beta_1\n",
+        "}\n",
+        "$$\n",
+        "\n"
       ]
     },
     {
@@ -1934,8 +1972,14 @@
       "source": [
         "def update(b0, b1, inds, step_size, lamb):\n",
         "\n",
-        "    L_partial0 = ... # your implementation here, can be more than one line\n",
-        "    L_partial1 = ... # your implementation here, can be more than one line\n",
+        "    m = len(inds)\n",
+        "    x = x1[inds]\n",
+        "    y = y[inds]\n",
+        "    yh = b0+b1x\n",
+        "    logi = np.exp(yh)/(1+np.exp(yh))\n",
+        "\n",
+        "    L_partial0 = 1/m*np.sum(logi-y)\n",
+        "    L_partial1 = 1/m*np.sum(x(logi-y)+2*lamb*b1)\n",
         "\n",
         "    b0 -= step_size * L_partial0\n",
         "    b1 -= step_size * L_partial1\n",
@@ -1964,7 +2008,13 @@
       "source": [
         "def loss(b0, b1, inds, lamb):\n",
         "\n",
-        "    output = ... # your implementation here, can be more than one line\n",
+        "    m = len(inds)\n",
+        "    x = x1[inds]\n",
+        "    y = y[inds]\n",
+        "    yh = b0+b1x\n",
+        "    logi = np.exp(yh)/(1+np.exp(yh))\n",
+        "\n",
+        "    output = 1/m*np.sum()\n",
         "\n",
         "    return output"
       ]
